--- a/D03-Numpy_Part2.ipynb
+++ b/D03-Numpy_Part2.ipynb
@@ -31,7 +31,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
