--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,84 +6,454 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-2-94d87a219f9b>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-94d87a219f9b>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    my_2d_array = np.array([[1,2,3,4], [5,6,7,8]]\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "# A 1-dimensional list of numbers.\n",
-    "my_array = np.array([1,2,3,4])\n",
-    "\n",
-    "# A 2-dimensional list of numbers.\n",
-    "my_2d_array = np.array([[1,2,3,4], [5,6,7,8]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_array = [1,2,3]"
+    "df = pd.DataFrame(\n",
+    "    {'alpha': [0, 1, 2, 3, 4],\n",
+    "     'beta': ['a', 'b', 'c', 'd', 'e']})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ndim' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-2bf051959c11>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mndim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_array\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'ndim' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   alpha beta\n",
+      "0      0    a\n",
+      "1      1    b\n",
+      "2      2    c\n",
+      "3      3    d\n",
+      "4      4    e\n",
+      "   sepal_length  sepal_width  petal_length  petal_width species\n",
+      "0           5.1          3.5           1.4          0.2  setosa\n",
+      "1           4.9          3.0           1.4          0.2  setosa\n",
+      "2           4.7          3.2           1.3          0.2  setosa\n",
+      "3           4.6          3.1           1.5          0.2  setosa\n",
+      "4           5.0          3.6           1.4          0.2  setosa\n"
      ]
     }
    ],
    "source": [
-    "ndim(my_array)\n"
+    "iris_df = pd.read_csv('iris.csv')\n",
+    "print(df)\n",
+    "print(iris_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ndim' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-2bf051959c11>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mndim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_array\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'ndim' is not defined"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>beta</th>\n",
+       "      <th>delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>b</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>c</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>d</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>e</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   alpha beta  delta\n",
+       "0      0    a      2\n",
+       "1      1    b      3\n",
+       "2      2    c      5\n",
+       "3      3    d      7\n",
+       "4      4    e     11"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_copy = df\n",
+    "df_copy['delta'] = np.array([2, 3, 5, 7, 11])\n",
+    "df_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_b = df\n",
+    "df_c = df\n",
+    "df_b['delta'] = np.array([2, 3, np.nan, 7, 11])\n",
+    "df_c['delta'] = np.array([2, np.nan, 5, np.nan, 11])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   alpha beta  delta\n",
+      "0      0    a    2.0\n",
+      "2      2    c    5.0\n",
+      "4      4    e   11.0\n",
+      "   alpha beta  delta\n",
+      "0      0    a    2.0\n",
+      "1      1    b    1.0\n",
+      "2      2    c    5.0\n",
+      "3      3    d    1.0\n",
+      "4      4    e   11.0\n"
      ]
     }
    ],
    "source": [
-    "ndim(my_array)"
+    "df_b = df_b.dropna()\n",
+    "df_c = df_c.fillna(1)\n",
+    "print(df_b)\n",
+    "print(df_c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***mean\n",
+      "sepal_length    5.843333\n",
+      "sepal_width     3.054000\n",
+      "petal_length    3.758667\n",
+      "petal_width     1.198667\n",
+      "dtype: float64\n",
+      "***stddev\n",
+      "sepal_length    0.828066\n",
+      "sepal_width     0.433594\n",
+      "petal_length    1.764420\n",
+      "petal_width     0.763161\n",
+      "dtype: float64\n",
+      "***var\n",
+      "sepal_length    0.685694\n",
+      "sepal_width     0.188004\n",
+      "petal_length    3.113179\n",
+      "petal_width     0.582414\n",
+      "dtype: float64\n",
+      "***median\n",
+      "sepal_length    5.80\n",
+      "sepal_width     3.00\n",
+      "petal_length    4.35\n",
+      "petal_width     1.30\n",
+      "dtype: float64\n",
+      "***max\n",
+      "sepal_length          7.9\n",
+      "sepal_width           4.4\n",
+      "petal_length          6.9\n",
+      "petal_width           2.5\n",
+      "species         virginica\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('***mean')\n",
+    "print(iris_df.mean())\n",
+    "print('***stddev')\n",
+    "print(iris_df.std())\n",
+    "print('***var')\n",
+    "print(iris_df.var())\n",
+    "print('***median')\n",
+    "print(iris_df.median())\n",
+    "print('***max')\n",
+    "print(iris_df.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method apply in module pandas.core.frame:\n",
+      "\n",
+      "apply(func, axis=0, broadcast=None, raw=False, reduce=None, result_type=None, args=(), **kwds) method of pandas.core.frame.DataFrame instance\n",
+      "    Apply a function along an axis of the DataFrame.\n",
+      "    \n",
+      "    Objects passed to the function are Series objects whose index is\n",
+      "    either the DataFrame's index (``axis=0``) or the DataFrame's columns\n",
+      "    (``axis=1``). By default (``result_type=None``), the final return type\n",
+      "    is inferred from the return type of the applied function. Otherwise,\n",
+      "    it depends on the `result_type` argument.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    func : function\n",
+      "        Function to apply to each column or row.\n",
+      "    axis : {0 or 'index', 1 or 'columns'}, default 0\n",
+      "        Axis along which the function is applied:\n",
+      "    \n",
+      "        * 0 or 'index': apply function to each column.\n",
+      "        * 1 or 'columns': apply function to each row.\n",
+      "    broadcast : bool, optional\n",
+      "        Only relevant for aggregation functions:\n",
+      "    \n",
+      "        * ``False`` or ``None`` : returns a Series whose length is the\n",
+      "          length of the index or the number of columns (based on the\n",
+      "          `axis` parameter)\n",
+      "        * ``True`` : results will be broadcast to the original shape\n",
+      "          of the frame, the original index and columns will be retained.\n",
+      "    \n",
+      "        .. deprecated:: 0.23.0\n",
+      "           This argument will be removed in a future version, replaced\n",
+      "           by result_type='broadcast'.\n",
+      "    \n",
+      "    raw : bool, default False\n",
+      "        * ``False`` : passes each row or column as a Series to the\n",
+      "          function.\n",
+      "        * ``True`` : the passed function will receive ndarray objects\n",
+      "          instead.\n",
+      "          If you are just applying a NumPy reduction function this will\n",
+      "          achieve much better performance.\n",
+      "    reduce : bool or None, default None\n",
+      "        Try to apply reduction procedures. If the DataFrame is empty,\n",
+      "        `apply` will use `reduce` to determine whether the result\n",
+      "        should be a Series or a DataFrame. If ``reduce=None`` (the\n",
+      "        default), `apply`'s return value will be guessed by calling\n",
+      "        `func` on an empty Series\n",
+      "        (note: while guessing, exceptions raised by `func` will be\n",
+      "        ignored).\n",
+      "        If ``reduce=True`` a Series will always be returned, and if\n",
+      "        ``reduce=False`` a DataFrame will always be returned.\n",
+      "    \n",
+      "        .. deprecated:: 0.23.0\n",
+      "           This argument will be removed in a future version, replaced\n",
+      "           by ``result_type='reduce'``.\n",
+      "    \n",
+      "    result_type : {'expand', 'reduce', 'broadcast', None}, default None\n",
+      "        These only act when ``axis=1`` (columns):\n",
+      "    \n",
+      "        * 'expand' : list-like results will be turned into columns.\n",
+      "        * 'reduce' : returns a Series if possible rather than expanding\n",
+      "          list-like results. This is the opposite of 'expand'.\n",
+      "        * 'broadcast' : results will be broadcast to the original shape\n",
+      "          of the DataFrame, the original index and columns will be\n",
+      "          retained.\n",
+      "    \n",
+      "        The default behaviour (None) depends on the return value of the\n",
+      "        applied function: list-like results will be returned as a Series\n",
+      "        of those. However if the apply function returns a Series these\n",
+      "        are expanded to columns.\n",
+      "    \n",
+      "        .. versionadded:: 0.23.0\n",
+      "    \n",
+      "    args : tuple\n",
+      "        Positional arguments to pass to `func` in addition to the\n",
+      "        array/series.\n",
+      "    **kwds\n",
+      "        Additional keyword arguments to pass as keywords arguments to\n",
+      "        `func`.\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    Series or DataFrame\n",
+      "        Result of applying ``func`` along the given axis of the\n",
+      "        DataFrame.\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    DataFrame.applymap: For elementwise operations.\n",
+      "    DataFrame.aggregate: Only perform aggregating type operations.\n",
+      "    DataFrame.transform: Only perform transforming type operations.\n",
+      "    \n",
+      "    Notes\n",
+      "    -----\n",
+      "    In the current implementation apply calls `func` twice on the\n",
+      "    first column/row to decide whether it can take a fast or slow\n",
+      "    code path. This can lead to unexpected behavior if `func` has\n",
+      "    side-effects, as they will take effect twice for the first\n",
+      "    column/row.\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    \n",
+      "    >>> df = pd.DataFrame([[4, 9]] * 3, columns=['A', 'B'])\n",
+      "    >>> df\n",
+      "       A  B\n",
+      "    0  4  9\n",
+      "    1  4  9\n",
+      "    2  4  9\n",
+      "    \n",
+      "    Using a numpy universal function (in this case the same as\n",
+      "    ``np.sqrt(df)``):\n",
+      "    \n",
+      "    >>> df.apply(np.sqrt)\n",
+      "         A    B\n",
+      "    0  2.0  3.0\n",
+      "    1  2.0  3.0\n",
+      "    2  2.0  3.0\n",
+      "    \n",
+      "    Using a reducing function on either axis\n",
+      "    \n",
+      "    >>> df.apply(np.sum, axis=0)\n",
+      "    A    12\n",
+      "    B    27\n",
+      "    dtype: int64\n",
+      "    \n",
+      "    >>> df.apply(np.sum, axis=1)\n",
+      "    0    13\n",
+      "    1    13\n",
+      "    2    13\n",
+      "    dtype: int64\n",
+      "    \n",
+      "    Returning a list-like will result in a Series\n",
+      "    \n",
+      "    >>> df.apply(lambda x: [1, 2], axis=1)\n",
+      "    0    [1, 2]\n",
+      "    1    [1, 2]\n",
+      "    2    [1, 2]\n",
+      "    dtype: object\n",
+      "    \n",
+      "    Passing result_type='expand' will expand list-like results\n",
+      "    to columns of a Dataframe\n",
+      "    \n",
+      "    >>> df.apply(lambda x: [1, 2], axis=1, result_type='expand')\n",
+      "       0  1\n",
+      "    0  1  2\n",
+      "    1  1  2\n",
+      "    2  1  2\n",
+      "    \n",
+      "    Returning a Series inside the function is similar to passing\n",
+      "    ``result_type='expand'``. The resulting column names\n",
+      "    will be the Series index.\n",
+      "    \n",
+      "    >>> df.apply(lambda x: pd.Series([1, 2], index=['foo', 'bar']), axis=1)\n",
+      "       foo  bar\n",
+      "    0    1    2\n",
+      "    1    1    2\n",
+      "    2    1    2\n",
+      "    \n",
+      "    Passing ``result_type='broadcast'`` will ensure the same shape\n",
+      "    result, whether list-like or scalar is returned by the function,\n",
+      "    and broadcast it along the axis. The resulting column names will\n",
+      "    be the originals.\n",
+      "    \n",
+      "    >>> df.apply(lambda x: [1, 2], axis=1, result_type='broadcast')\n",
+      "       A  B\n",
+      "    0  1  2\n",
+      "    1  1  2\n",
+      "    2  1  2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(df.apply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    2.258318\n",
+      "1    2.213594\n",
+      "2    2.167948\n",
+      "3    2.144761\n",
+      "4    2.236068\n",
+      "Name: sepal_length, dtype: float64\n",
+      "0    0.447214\n",
+      "1    0.447214\n",
+      "2    0.447214\n",
+      "3    0.447214\n",
+      "4    0.447214\n",
+      "Name: petal_width, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(iris_df['sepal_length'].apply(np.sqrt).head())\n",
+    "print(iris_df['petal_width'].apply(np.sqrt).head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
